# PROWZI

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt  what_changed.md
.github/: CODEOWNERS
.github/workflows/: dr-drill.yml  e2e-chaos.yml  main.yml  sbom.yml  security-scan.yml  security.yml
adk_agents/: Dockerfile  analysis_agent.py  requirements.txt
adk_agents/kubernetes/: analysis-agent-deployment.yaml
agent-runtime/analyzers/: Cargo.toml
agent-runtime/analyzers/src/: graph_analyzer.rs  lib.rs  quantum_risk_engine.rs
agent-runtime/analyzers/trading_agent/: Cargo.toml  README-DAY2.md  demo_quick_win.py
agent-runtime/analyzers/trading_agent/src/: ai_simulation_hypercluster.rs  cross_chain_arbitrage.rs  dao_governance.rs  dashboard.html  dashboard.rs  hardware_acceleration.rs  main.rs  mev_protection.rs  predictive_analytics.rs  quick_win.rs  tests.rs  zk_privacy.rs
agent-runtime/core/: Cargo.toml  ORCHESTRATOR_ENHANCEMENTS.md
agent-runtime/core/src/: actor.rs  adaptive_security_system.rs  adk_integration.rs  autonomous_coordination.rs  budget.rs  chat_command_processor.rs  collaboration.rs  gpu.rs  lib.rs  memory.rs  messages.rs  mission.rs  orchestrator.rs  performance.rs  portfolio_optimizer.rs  risk.rs  security.rs  zero_copy.rs
agent-runtime/core/src/memory/: collective_memory.rs  consolidation.rs  episodic_memory.rs  mod.rs  semantic_memory.rs  working_memory.rs
agent-runtime/core/src/orchestration/: agent_types.rs  coordination_messages.rs  mod.rs  performance_monitor.rs  quantum_orchestrator.rs
agent-runtime/core/src/protection/: anti_frontrunning_shield.rs  ml_protection_optimizer.rs  mod.rs  position_guardian.rs  quantum_circuit_breaker.rs
agent-runtime/core/src/trading/: liquidity_engine.rs  mev_protection.rs  micro_capital_optimizer.rs  mod.rs  quantum_routing.rs  solana_executor.rs  transaction_optimizer.rs
agent-runtime/core/tests/: orchestration_integration_tests.rs
agent-runtime/crypto_signer/: Cargo.toml
agent-runtime/crypto_signer/src/: hardware_integration.rs  lib.rs  multisig_wallet.rs  quantum_threshold.rs  wallet_manager.rs
agent-runtime/evaluator/: Cargo.toml
agent-runtime/guardian/: Cargo.toml
agent-runtime/mcp/: Cargo.toml
agent-runtime/mcp/src/: claude_proxy.rs  lib.rs  llama_proxy.rs  perplexity_proxy.rs
agent-runtime/orchestrator/: Cargo.toml
agent-runtime/orchestrator/src/: budget.rs  main.rs  scheduler.rs  state.rs
agent-runtime/risk/: Cargo.toml
agent-runtime/risk/src/: advanced_training.rs  anti_frontrunning_shield.rs  circuit_breaker.rs  config.rs  dynamic_stop_loss_system.rs  emergency_exit_system.rs  engine.rs  hedge_manager.rs  lib.rs  market_state_tracker.rs  metrics.rs  models.rs  monitoring.rs  neural.rs  neural_prediction.rs  portfolio.rs  position_guardian.rs  position_risk_manager.rs  position_sizing_system.rs  protection.rs  protection_engine.rs  protection_optimizer.rs  quantum_circuit_breaker.rs  risk_management_system.rs  risk_model.rs  trailing_stop.rs  var_calculator.rs
agent-runtime/sensors/solana_mempool/: Cargo.toml
agent-runtime/sensors/solana_mempool/src/: main.rs
agent-runtime/weight-updater/: Cargo.toml
agent-runtime/weight-updater/src/: main.rs
attached_assets/: prowzi Agents.txt
config/: models.yaml
crates/prowzi-failover/: Cargo.toml
database/: schema.sql
docker/curator/: Dockerfile
docker/evaluator/: Dockerfile
docker/gateway/: Dockerfile
docker/guardian/: Dockerfile
docker/notifier/: Dockerfile
docker/orchestrator/: Dockerfile
docker/sensor-arxiv/: Dockerfile
docker/sensor-github/: Dockerfile
docker/sensor-solana/: Dockerfile
docker/weight-updater/: Dockerfile
governance/: security-board-charter.md
infrastructure/gcp/: cost-optimized-deployment.yaml
infrastructure/scripts/: deploy-production.sh
infrastructure/terraform/: backup.tf  gcp-cost-optimized.tf  vault.tf
migrations/: 0002_rls.sql  0003_tenant_isolation.sql  20250602_row_level_security.sql  add_evi_weights.sql
platform/analytics/: ai-monitoring-dashboard.tsx  executive_dashboard.tsx  mission-analytics.ts  package.json  pnpm-lock.yaml
platform/api/: gdpr-controller.ts  package.json  pnpm-lock.yaml  status-page.ts
platform/auth/: .env.example  Cargo.toml  README.md  setup.ps1  setup.sh
platform/auth/examples/: gateway_integration.rs
platform/auth/src/: auth_service.rs  config.rs  errors.rs  jwt_auth.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  secure_jwt_auth.rs  utils.rs
platform/billing/: dynamic_pricing.ts
platform/compliance/: code-of-conduct.md  gdpr-service.ts
platform/curator/: llama-summarizer.ts  package.json  pnpm-lock.yaml
platform/debug/: console.rs
platform/finops/: cost-monitor.ts
platform/gateway/: Cargo.toml  main.py
platform/gateway/src/: auth.rs  db.rs  main.rs
platform/marketplace/: marketplace.ts
platform/mission-control/: package.json  plan-manager.ts  planner.ts  pnpm-lock.yaml
platform/ml-models/: anomaly_detector.py  gpu_similarity.cu  requirements.txt.disabled  rug_detector_v2.py  vector_schema.py
platform/notifier/: go.mod  handlers.go  hmac.go  main.go  signing.go
platform/observability/: tracing.rs
platform/security/: data_classification.rs  package.json  pnpm-lock.yaml  quantum-security-framework.ts  risk-scorer.ts  tenant_isolation.rs  threat_detection.rs
platform/shared/: connection-manager.ts  enhanced-message-orchestrator.ts  llmClients.ts  message-bus.ts  message-observability.ts  modelRouter.ts  package.json  pnpm-lock.yaml
platform/timeseries/: query_optimizer.sql
platform/web/: app.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css
protos/prowzi/: agents.proto  events.proto
schemas/core/: evi.proto  messages.proto
scripts/: day1_quickwin_test.py  performance-benchmark.ts  production-readiness-check.ts  restore-wal.sh  wal-archive.sh
sdk/auth/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
tests/e2e/: integration.test.ts  kind-config.yaml  load-test.js
tests/integration/: breakthrough-features.test.ts  framework.ts
(+74 files in other folders)
