[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.6",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "nats-py>=2.10.0",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
