[package]
name = "prowzi-analyzers"
version = "0.1.0"
edition = "2021"
description = "Analysis components for Prowzi's real-time crypto intelligence platform"
authors = ["Prowzi Team"]
license = "MIT"

[lib]
name = "prowzi_analyzers"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.14", features = ["full", "time"] }

# Messaging
async-nats = "0.30"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana SDK
solana-sdk = "1.14"
solana-client = "1.14"
solana-transaction-status = "1.14"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# LLM client
reqwest = { version = "0.11", features = ["json"] }

# Machine Learning and Data Analysis
ndarray = "0.15"

# Networking and Cross-chain
web3 = "0.19"

# Hardware acceleration
rayon = "1.7"
crossbeam = "0.8"

# Cryptography
ring = "0.16"
aes-gcm = "0.10"

# Additional utilities
dashmap = "5.4"
parking_lot = "0.12"

# Crypto signing
prowzi-crypto-signer = { path = "../crypto_signer" }

# Core Prowzi dependencies
prowzi-core = { path = "../core" }

[features]
default = ["dry-run"]
dry-run = []
live = []

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"
test-log = { version = "0.2", features = ["trace"] }
