[package]
name = "prowzi-core"
version = "0.1.0"
edition = "2021"
description = "Core actor framework for Prowzi AI agents"
authors = ["Prowzi Team <engineering@prowzi.com>"]
license = "MIT"
repository = "https://github.com/prowzi/prowzi"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["limit", "trace", "cors"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"

# Database
sqlx = { version = "0.6", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono"
] }

# Message queues
# # async-nats = "0.20"  # Temporarily disabled  # Temporarily disabled due to zeroize conflict

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Configuration
config = "0.13"

# Security
ring = "0.16"
base64 = "0.21"

# Async trait support
async-trait = "0.1"

# Concurrency and performance
parking_lot = "0.12"
dashmap = "5.0"
crossbeam = "0.8"
futures = "0.3"
rayon = "1.7"

# Machine learning and numerical computing
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"

# Blockchain
solana-sdk = "1.18.26"
solana-client = { version = "1.18.26", default-features = false }
spl-token = "4.0"

# Additional serialization
bincode = "1.3"

# WebSocket support
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Cryptography
ed25519-dalek = { version = "1.0.1", default-features = false }
sha2 = "0.10"
sha3 = "0.10"

# Force base64ct to edition-2021 compatible version
base64ct = "=1.7.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
cuda = []
opencl = []
tensorrt = []

