[package]
name = "prowzi-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol proxy for Prowzi's autonomous AI agents"
authors = ["Prowzi Team"]
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server and client
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
hyper = { version = "0.14", features = ["full"] }

# Environment and configuration
dotenv = "0.15"
config = "0.13"
once_cell = "1.17"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

# Prowzi core dependencies
prowzi-core = { path = "../core" }

[features]
default = ["perplexity", "claude", "deepseek", "qwen", "gemini", "llama"]
perplexity = []
claude = []
deepseek = []
qwen = []
gemini = []
llama = []
mock = []

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
wiremock = "0.5"
