[package]
name = "prowzi-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Mission orchestration service for Prowzi agents"
authors = ["Prowzi Team <engineering@prowzi.com>"]
license = "MIT"

[dependencies]
prowzi-core = { path = "../core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["limit", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Message queues
async-nats = "0.32"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"