[package]
name = "prowzi-weight-updater"
version = "0.1.0"
edition = "2021"
description = "ML model weight updater service for Prowzi"
authors = ["Prowzi Team <engineering@prowzi.com>"]
license = "MIT"

[dependencies]
prowzi-core = { path = "../core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ML frameworks
candle-core = "0.3"
candle-nn = "0.3"
ndarray = "0.15"

# File I/O
tar = "0.4"
flate2 = "1.0"

# Message queues
async-nats = "0.32"

[dev-dependencies]
tokio-test = "0.4"