[package]
name = "prowzi-failover"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dashmap = "5.0"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"