[package]
name = "prowzi-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication service for Prowzi platform"
authors = ["Prowzi Team <engineering@prowzi.com>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["limit", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JWT and crypto
jsonwebtoken = "8.0"
ring = "0.16"

# Ethereum
ethers = "2.0"

# Solana
solana-sdk = "1.18"

# Encoding
hex = "0.4"
base64 = "0.21"

# Random
rand = "0.8"

# Password hashing
argon2 = "0.5"

# OAuth
oauth2 = "4.0"

# Environment
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"