[package]
name = "prowzi-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Prowzi Team <team@prowzi.com>"]
description = "Prowzi API Gateway - High-performance routing and orchestration for Prowzi AI agents"
license = "MIT"
repository = "https://github.com/prowzi/prowzi"

[[bin]]
name = "prowzi-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "headers", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "timeout", "auth"] }
hyper = { version = "1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
base64 = "0.21"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
governor = "0.6"
nonzero_ext = "0.3"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
url = "2.5"
regex = "1.10"
lazy_static = "1.4"
dotenvy = "0.15"

# Local dependencies
prowzi-auth = { path = "../auth" }

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"
axum-test = "14.2"
mockito = "1.4"
tempfile = "3.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gateway_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
debug = true
opt-level = 1